# codespace_algorand

./: README.md  main.py  mainx.py  pyproject.toml
charmer/: README.md  charmer.code-workspace
charmer/projects/charmer/: .algokit.toml  README.md  pyproject.toml
charmer/projects/charmer/.algokit/: .copier-answers.yml
codespace_algorand/: README.md  codespace_algorand.code-workspace
codespace_algorand-main/: main.py
codespace_algorand/projects/codespace_algorand/: .algokit.toml  README.md  pyproject.toml
codespace_algorand/projects/codespace_algorand/.algokit/: .copier-answers.yml
elvis/: README.md  elvis.code-workspace
elvis/projects/elvis/: .algokit.toml  README.md  pyproject.toml
elvis/projects/elvis/.algokit/: .copier-answers.yml
