[tool.poetry]
name = "codespace-algorand"
version = "0.1.0"
description = ""
authors = ["Twilight <158759143+Muneeb-Ahmad-404@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
